# fabric-prototype

./: .python-version  README.md  behave_init.sh  dc-base-5-thru-7.yml  dc-base.yml  dc-composer.yml  dc-disaster-recovery-raft.yml  dc-hl-summit-2019-tcf-demo.yml  dc-orderer-kafka-base.yml  dc-orderer-kafka.yml  dc-peer-base.yml  dc-peer-couchdb.yml  dc-spacetech-tracking.yml  environment.py  nginx-start.sh  nginx.conf.template  pyproject.toml  r.sh  requirements.txt
common/: collection_pb2.py  common_pb2.py  configtx_pb2.py  configuration_pb2.py  ledger_pb2.py  policies_pb2.py
discovery/: protocol_pb2.py  protocol_pb2_grpc.py
features/: bootstrap.feature  disaster_recovery-raft.feature  disaster_recovery.feature  hl-summit-2019-tcf-demo.feature  safe_asset_transfer.feature  space_tech.feature  upgrade.feature
gossip/: message_pb2.py  message_pb2_grpc.py
msp/: identities_pb2.py  msp_config_pb2.py  msp_principal_pb2.py
orderer/: ab_pb2.py  ab_pb2_grpc.py  cluster_pb2.py  cluster_pb2_grpc.py  configuration_pb2.py  kafka_pb2.py
peer/: chaincode_event_pb2.py  chaincode_pb2.py  chaincode_shim_pb2.py  chaincode_shim_pb2_grpc.py  collection_pb2.py  configuration_pb2.py  events_pb2.py  events_pb2_grpc.py  peer_pb2.py  peer_pb2_grpc.py  policy_pb2.py  proposal_pb2.py  proposal_response_pb2.py  query_pb2.py  resources_pb2.py  signed_cc_dep_spec_pb2.py  transaction_pb2.py
steps/: bootstrap_impl.py  bootstrap_util.py  compose.py  composer.py  contexthelper.py  docgen.py  endorser_impl.py  endorser_util.py  orderer_util.py
transientstore/: transientstore_pb2.py
(+9 files in other folders)
