[tool.poetry]
name = "fabric-prototyype"
version = "0.1.0"
description = ""
authors = ["Jeff Garratt <garratt.jeff@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
grpcio = "^1.26.0"
grpcio-tools = "^1.26.0"
behave = "^1.2.6"
pysha3 = "^1.0.2"
b3j0f-aop = "^0.8.4"
jinja2 = "^2.10.3"
pyopenssl = "^19.1.0"
ecdsa = "^0.15"
python-slugify = "^4.0.0"
pyyaml = "^5.3"
asn1crypto = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
